[tool.poetry]
name = "whats_the_song"
version = "0.1.0"
description = ""
authors = ["Jhonatan Teixeira <jhonatan.teixeira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.0.1"
pygame-menu = "^4.1.3"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
